# My-Projects

cudatest/: add.cu  first_cuda.cu  second_cuda.cu
socket/: nsds.cpp  nsds.h
socket/nsds_c/: CMakeLists.txt  dataclient.cpp  dataclient.h  filesender.cpp  filesender.h  main.cpp  msgclient.cpp  msgclient.h  nsds_c.pro  nsds_c.pro.user.83934b0
socket/nsds_server/: CMakeLists.txt  dataserver.cpp  dataserver.h  filerecepter.cpp  filerecepter.h  main.cpp  msgserver.cpp  msgserver.h  nsds_server.pro  nsds_server.pro.user.83934b0
